--- a/doc/api.yml
+++ b/doc/api.yml
@@ -259,6 +259,8 @@ components:
           type: number
         isRequired:
           type: boolean
+        type:
+          $ref: "#/components/schemas/QuestionType"
         options:
           type: array
           items:
